--- a/creacion-chat-g19/front/src/components/Contact.module.css
+++ b/creacion-chat-g19/front/src/components/Contact.module.css
@@ -8,8 +8,10 @@
     flex-direction: row;
     column-gap: 1rem;
     padding: 0.5rem;
+    align-items: center;
 }
 
 .contactoindividual img {
-    height: 20px;
+    height: 50px;
+    border-radius: 40px;
 }
