--- a/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
+++ b/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
@@ -5,17 +5,21 @@
     grid-template-areas: 
     "contenedorcontactos contenedorchatindividual";
     background-color: black;
+    height: 100vh;
 }
 
 .contenedorcontactos {
     padding: 1rem;
     grid-area: "contenedorcontactos";
-    color: white;
+    color: rgb(0, 0, 0);
+    background-color: #e3eafc;
     min-height: 100%;
+    border-color: black;
 }
 
 .contenedorchatindividual{
     display: grid;
     grid-area: "contenedorchatindividual";
     min-height: 100%;
+    background: linear-gradient(135deg, #1976d2 0%, #f5f7fa 100%); 
 }
