--- a/creacion-chat-g19/front/src/components/Contact.module.css
+++ b/creacion-chat-g19/front/src/components/Contact.module.css
@@ -1,5 +1,5 @@
 .nombrecontacto {
-    color: white;
+    color: rgb(58, 58, 58);
     font-size:20px;
 }
 
@@ -9,6 +9,8 @@
     column-gap: 1rem;
     padding: 0.5rem;
     align-items: center;
+    border-color: black;
+    border-bottom: solid;
 }
 
 .contactoindividual img {
