--- a/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
+++ b/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
@@ -11,8 +11,8 @@
 .contenedorcontactos {
     padding: 1rem;
     grid-area: "contenedorcontactos";
-    color: rgb(0, 0, 0);
-    background-color: #e3eafc;
+    color: black;
+    background-color: #f5f7fa;
     min-height: 100%;
     border-color: black;
 }
@@ -20,6 +20,11 @@
 .contenedorchatindividual{
     display: grid;
     grid-area: "contenedorchatindividual";
+    display: flex;
     min-height: 100%;
     background: linear-gradient(135deg, #1976d2 0%, #f5f7fa 100%); 
+    justify-content:flex-end;
+    align-items:center;
+    flex-direction: column;
+    row-gap: 2rem;
 }
