--- a/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
+++ b/creacion-chat-g19/front/src/app/(autentication)/chat/page.module.css
@@ -23,8 +23,10 @@
     display: flex;
     min-height: 100%;
     background: linear-gradient(135deg, #1976d2 0%, #f5f7fa 100%); 
-    justify-content:flex-end;
-    align-items:center;
+    justify-content:flex-start;
+    align-items:flex-start;
     flex-direction: column;
-    row-gap: 2rem;
+    overflow-y: auto;
+    row-gap: 1rem;
+    padding: 10px;
 }
