--- a/creacion-chat-g19/front/src/components/Button.module.css
+++ b/creacion-chat-g19/front/src/components/Button.module.css
@@ -18,3 +18,7 @@
     background: linear-gradient(90deg, #1565c0 60%, #42a5f5 100%);
     transform: translateY(-2px) scale(1.03);
 }
+
+.buttonEnviar{
+    white-space: nowrap;
+}
