--- a/creacion-chat-g19/front/src/components/Input.module.css
+++ b/creacion-chat-g19/front/src/components/Input.module.css
@@ -13,3 +13,16 @@
     outline: none;
     background: #e3eafc;
 }
+
+.inputContainer{
+    display: flex;
+    width: 100%;
+    gap: 0,5rem;
+    align-items: center;
+    margin-top: auto;
+}
+.inputMessage{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
+}
