Revert "Merge pull request #4 from camilagiardini/sebascurtite"
This reverts commit 2bc6997ea9bf88afb767f8c1bd8906c710a63096, reversing
changes made to ccb5b49459ad837c656bac84a02f3a757ed3556c.

--- a/creacion-chat-g19/front/src/app/(autentication)/register/register.module.css
+++ b/creacion-chat-g19/front/src/app/(autentication)/register/register.module.css
@@ -27,6 +27,13 @@
     gap: 18px;
 }
 
+.loginContainer button {
+    
+}
+
+.loginContainer button:hover {
+    
+}
 
 .loginContainer .error {
     color: #d32f2f;
